overlays/terrakube/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrakube-api
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
